--- a/app/src/main/res/values-sv/arrays.xml
+++ b/app/src/main/res/values-sv/arrays.xml
@@ -1,79 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<resources>
-  <string-array name="array_super_park_abnormal">
-    <item>[&] Dörren är öppen</item>
-    <item>Motorhuven är öppen</item>
-    <item>Onormalt däcktryck, kontrollera det</item>
-    <item>Parkering fel, kontakta kundtjänst</item>
-    <item>Parkering fel, kontakta kundtjänst</item>
-    <item>Parkering onormal, kontakta kundtjänst</item>
-    <item>Gör fordonet redo först</item>
-    <item>Kan inte detektera parkeringsplatser på grund av högre hastigheter</item>
-    <item>Parkering fel, kontakta kundtjänst</item>
-    <item>Spänn fast säkerhetsbältet först</item>
-    <item>Bagageutrymmet är öppet</item>
-    <item>Släpvagnsläge aktiverat, IPA är otillgängligt</item>
-    <item>Justera fjädringen till normal position</item>
-    <item>Fjädringen används, kan inte parkera</item>
-    <item>Fjädringsfel, kontakta kundtjänst</item>
-    <item>[&]</item>
-    <item>[&]</item>
-    <item>[&] Parkering Pausd, bromsen är inte släppt</item>
-    <item>Parkering Pausd, dörrarna är öppna</item>
-    <item>Parkering Pausd, släpp gaspedalen</item>
-    <item>Parkering Pausd, bagageutrymmet är öppet</item>
-    <item>Parkering Pausd, motorhuven är öppen</item>
-    <item>[&]</item>
-    <item>[&]</item>
-  </string-array>
-  <string-array name="array_pro_parking_tts">
-    <item>Släpp bromsen och vi är redo att åka!</item>
-    <item>Minnesparkering pågår</item>
-    <item>Vänstersväng framför</item>
-    <item>Högervarv framför</item>
-    <item>Vid korsningen framför, var vänlig och se upp för fordon</item>
-    <item>Ska snart köra in på en ramp</item>
-    <item>Ska snart köra in på en ramp</item>
-    <item>Ska snart passera hinder framför</item>
-    <item>Undviker närliggande hinder</item>
-    <item>[&] Accelerera inte</item>
-    <item>Minnesparkering avslutad</item>
-    <item>Minnesparkering avslutad</item>
-    <item>Ska snart parkera på din parkeringsplats</item>
-    <item>Minnesparkering avslutad</item>
-    <item>[&]</item>
-    <item>Var vänlig och var uppmärksam på omgivningen</item>
-    <item>Var försiktig i smala passager</item>
-    <item>Ska snart nå din parkeringsplats</item>
-    <item>Ska snart köra över en fartgupp, håll i dig</item>
-    <item>Undviker fotgängare framför</item>
-    <item>[&] Undviker fotgängare</item>
-    <item>Ska snart passera det främre fordonet</item>
-    <item>[&] Väntar på att det främre fordonet ska flytta sig</item>
-    <item>Minnesparkering avslutad</item>
-    <item>Ska snart backa och justera position</item>
-    <item>Var uppmärksam på mötande fordon</item>
-    <item>Misslyckades med att aktivera Minnesparkering</item>
-    <item>Undviker fordonen bakom</item>
-    <item>Var uppmärksam på fotgängare</item>
-    <item>Var uppmärksam på fotgängare</item>
-    <item>Nödbromsning</item>
-    <item>Var uppmärksam på omgivningen</item>
-    <item>[&] Bilen bakom har följt efter länge, undvik den</item>
-    <item>Söker efter parkeringsplatser längs vägen</item>
-    <item>Hittade en parkeringsplats, var vänlig och klicka på Start</item>
-    <item>Misslyckades med att hitta parkeringsplatser längs vägen</item>
-    <item>[&]</item>
-    <item>Hittade en parkeringsplats, var vänlig och klicka på Start</item>
-    <item>Hittade en parkeringsplats, var vänlig och klicka på Start</item>
-    <item>Var vänlig och var uppmärksam på bomstationen</item>
-    <item>[&] Ska snart köra ut från rampen, var vänlig och var försiktig</item>
-    <item>Närmar sig en ramp, ta över fordonet och hjälp mig att köra igenom</item>
-    <item>Minnesparkering avslutad, var vänlig och följ guidelinjen till nästa nivå</item>
-  </string-array>
-  <string-array name="array_setting_dialog_tab">
-    <item>Röst</item>
-    <item>Ljudeffekt</item>
-  </string-array>
-</resources>
+<resources><array name="array_auto_parking"><item></item><item>请踩住刹车，点击开始</item><item>请松开刹车，开始泊车</item><item>请注意周围环境安全</item><item>泊车暂停，有障碍物阻挡</item><item>泊车已退出，请接管车辆</item><item>泊车已完成</item><item>泊车已退出</item><item>请注意周围环境安全</item><item>泊车暂停，有障碍物阻挡</item><item>泊出已退出</item><item>泊出已完成</item><item>请松开刹车，开始泊出</item><item>确认安全后，点击继续泊车</item><item>确认安全后，点击继续泊车</item><item>点击开始，帮你泊出</item><item></item><item>倒车中，请注意周围环境安全</item><item>车速过快，暂无法识别车位</item><item></item><item>找到车位，如需泊入请停车</item><item>泊车暂不可用</item><item>踩住刹车，点击开始</item><item>如需泊入，请踩刹车</item><item>请踩刹车，车辆溜车</item><item>坡度过大，暂无法识别车位</item><item>已暂停，如需恢复可松开刹车</item><item>倒车中，请注意周围环境安全</item><item></item><item></item><item></item><item></item><item></item><item>请注意后方剐蹭风险</item><item>正在探测车位内空间是否充足</item><item>车位有障碍物，请更换</item><item>请踩刹车，车辆溜车</item><item></item><item>泊车路径规划中</item><item>这个车位有点难，帮帮我吧</item></array><array name="array_toast_super_park"><item>泊车暂不可用</item><item>车门打开</item><item>车前盖打开</item><item>胎压异常，智能辅助泊车不可用</item><item>发生异常，请联系客服</item><item>发生异常，请联系客服</item><item>发生异常，请联系客服</item><item>请先使车辆Ready</item><item>当前车速高于24km/h，无法识别车位</item><item>发生异常，请联系客服处理</item><item>请先系好安全带</item><item>请先关闭尾门</item><item>拖车模式已开启，智能辅助泊车不可用</item><item>请调整悬架到正常挡位</item><item>悬架工作中，泊车无法进入</item><item>悬架异常，请联系客服</item><item></item><item></item><item></item><item></item><item></item><item>请松开刹车</item><item>请关闭车门</item><item>请松开加速踏板</item><item>请关闭尾门</item><item>请关闭前舱盖</item><item></item><item></item><item></item><item></item><item></item></array><array name="array_super_park_abnormal"><item></item><item>Dörren är öppen</item><item>Motorhuven är öppen</item><item>Onormalt däcktryck, kontrollera det</item><item>Parkering fel, kontakta kundtjänst</item><item>Parkering fel, kontakta kundtjänst</item><item>Parkering onormal, kontakta kundtjänst</item><item>Gör fordonet redo först</item><item>Kan inte detektera parkeringsplatser på grund av högre hastigheter</item><item>Parkering fel, kontakta kundtjänst</item><item>Spänn fast säkerhetsbältet först</item><item>Bagageutrymmet är öppet</item><item>Släpvagnsläge aktiverat, IPA är otillgängligt</item><item>Justera fjädringen till normal position</item><item>Fjädringen används, kan inte parkera</item><item>Fjädringsfel, kontakta kundtjänst</item><item></item><item></item><item></item><item></item><item></item><item>Parkering Pausd, bromsen är inte släppt</item><item>Parkering Pausd, dörrarna är öppna</item><item>Parkering Pausd, släpp gaspedalen</item><item>Parkering Pausd, bagageutrymmet är öppet</item><item>Parkering Pausd, motorhuven är öppen</item><item></item><item></item><item></item><item></item><item></item></array><array name="array_no_use_toast"><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>请保持手动驾驶，车速小于15km/h再试</item><item>请保持手动驾驶，系好安全带后再试</item><item>请先关闭HDC</item><item>请保持手动驾驶，松开加速踏板后再试</item><item>请松开刹车</item><item>请保持手动驾驶，关闭车门后再试</item><item>记忆泊车暂不可用，再往前开一会儿</item><item>为了您的安全，请重新学习泊车路线，当前路线有逆行路段</item><item>正在校验路线是否安全，请稍后再试</item><item>我好像迷路了，下次再试试吧</item><item>请保持手动驾驶，驶离坡道后再试</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>请保持手动驾驶，等待悬架调节完成后再试</item><item>请保持手动驾驶，调节悬架到正常高度后再试</item><item>请先手动驾驶通过坡道</item></array><array name="array_no_use"><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用，请保持手动驾驶，降低车速后再试</item><item>记忆泊车暂不可用，请保持手动驾驶，系好安全带后再试</item><item>请先关闭HDC</item><item>记忆泊车暂不可用，请保持手动驾驶，松开加速踏板后再试</item><item>请松开刹车</item><item>记忆泊车暂不可用，请保持手动驾驶，关闭车门后再试</item><item>记忆泊车暂不可用，再往前开一会儿</item><item>为了您的安全，请重新学习泊车路线，当前路线有逆行路段</item><item>正在校验路线是否安全，请稍后再试</item><item>我好像迷路了，下次再试试吧</item><item>记忆泊车暂不可用，请保持手动驾驶，驶离坡道后再试</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用，请保持手动驾驶，等待悬架调节完成后再试</item><item>记忆泊车暂不可用，请保持手动驾驶，调节悬架到正常高度后再试</item><item>请先手动驾驶通过坡道</item></array><array name="array_pro_parking"><item>请松开刹车</item><item></item><item>前方即将左转</item><item>前方即将右转</item><item>前方路口，请注意穿行车辆</item><item>即将驶入坡道</item><item>即将驶入坡道</item><item>即将绕行前方障碍物</item><item>正在避让附近障碍物</item><item></item><item>不要加速，我怕</item><item>记忆泊车已退出</item><item>记忆泊车已退出</item><item>即将泊入你的车位</item><item>记忆泊车已退出</item><item></item><item></item><item>请注意周围环境</item><item>通行空间狭窄，请注意</item><item>即将到达你的车位</item><item>即将通过减速带，你坐稳</item><item>正在绕行前方行人</item><item></item><item>正在避让行人</item><item>即将绕行前车</item><item></item><item>正在等待前车行驶</item><item>记忆泊车退出</item><item>即将倒车调整位置</item><item>前方有来车，请注意安全</item><item>记忆泊车激活失败</item><item>正在礼让后方车辆</item><item>注意行人</item><item>注意行人</item><item>紧急制动</item><item>注意周围环境</item><item></item><item>后方长时间跟车，请注意让行</item><item>正在寻找沿途车位</item><item>找到车位，请点击开始</item><item>寻找沿途车位失败</item><item></item><item></item><item>找到车位，请点击开始</item><item>找到车位，请点击开始</item><item>请注意收费杆</item><item></item><item>即将驶出坡道，请注意安全</item><item>临近坡道，请接管帮我开过去吧</item><item>记忆泊车已退出，请沿引导线开往下一层吧</item></array><array name="array_pro_parking_tts"><item>Släpp bromsen och vi är redo att åka!</item><item>Minnesparkering pågår</item><item>Vänstersväng framför</item><item>Högervarv framför</item><item>Vid korsningen framför, var vänlig och se upp för fordon</item><item>Ska snart köra in på en ramp</item><item>Ska snart köra in på en ramp</item><item>Ska snart passera hinder framför</item><item>Undviker närliggande hinder</item><item></item><item>Accelerera inte</item><item>Minnesparkering avslutad</item><item>Minnesparkering avslutad</item><item>Ska snart parkera på din parkeringsplats</item><item>Minnesparkering avslutad</item><item></item><item></item><item>Var vänlig och var uppmärksam på omgivningen</item><item>Var försiktig i smala passager</item><item>Ska snart nå din parkeringsplats</item><item>Ska snart köra över en fartgupp, håll i dig</item><item>Undviker fotgängare framför</item><item></item><item>Undviker fotgängare</item><item>Ska snart passera det främre fordonet</item><item></item><item>Väntar på att det främre fordonet ska flytta sig</item><item>Minnesparkering avslutad</item><item>Ska snart backa och justera position</item><item>Var uppmärksam på mötande fordon</item><item>Misslyckades med att aktivera Minnesparkering</item><item>Undviker fordonen bakom</item><item>Var uppmärksam på fotgängare</item><item>Var uppmärksam på fotgängare</item><item>Nödbromsning</item><item>Var uppmärksam på omgivningen</item><item></item><item>Bilen bakom har följt efter länge, undvik den</item><item>Söker efter parkeringsplatser längs vägen</item><item>Hittade en parkeringsplats, var vänlig och klicka på Start</item><item>Misslyckades med att hitta parkeringsplatser längs vägen</item><item></item><item></item><item>Hittade en parkeringsplats, var vänlig och klicka på Start</item><item>Hittade en parkeringsplats, var vänlig och klicka på Start</item><item>Var vänlig och var uppmärksam på bomstationen</item><item></item><item>Ska snart köra ut från rampen, var vänlig och var försiktig</item><item>Närmar sig en ramp, ta över fordonet och hjälp mig att köra igenom</item><item>Minnesparkering avslutad, var vänlig och följ guidelinjen till nästa nivå</item></array><array name="array_training_tips"><item>请先进入地下停车场再试</item><item>请驶离坡道再试</item><item>开始学习前，请勿在地库倒车</item><item>暂时无法开启</item><item></item><item>路线学习中，请开往你的车位</item><item>车速过高，请降低车速</item><item>刚经过坡道，已更新学习起点为当前位置</item><item>刚经过减速带</item><item>超过最大学习里程，路线学习已退出</item><item>本次学习结束</item><item>已驶离停车场，路线学习已退出</item><item>正在保存学习路线</item><item>学习成功</item><item>学习失败</item><item></item><item></item><item></item><item>检测到倒车行为，本次学习失败，请重新输入停车场再试</item><item>检测到上坡，本次学习失败</item><item>检测到下坡，本次学习失败</item><item>请先进入地下停车场再试</item><item>请先进入地下停车场再试</item><item>记忆泊车中，地图学习不可用</item><item>记忆泊车已使用过，地图学习不可用</item><item>遇到一点小麻烦，这次无法学习了</item><item>请先关闭车门</item><item>功能开关未打开</item><item>学习中，学习距离达到900米</item><item>学习出现闭环路线</item><item>满足学习条件但未识别到车位</item><item>遇到一点小麻烦，暂不可用</item></array><array name="array_training_fail_reason"><item>重跑一次或换条路试试</item><item>未泊入车位</item><item>路线信息不足</item><item>倒车行驶</item><item>路线保存失败</item></array><array name="array_notification_words"><item>好的</item><item>可以</item><item>没问题</item></array><array name="array_share_map_view_floors"><item>负一层</item><item>负二层</item><item>负三层</item><item>负四层</item><item>其他</item></array><array name="array_setting_dialog_tab"><item>Röst</item><item>Ljudeffekt</item></array></resources>
