--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -1,79 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<resources>
-  <string-array name="array_super_park_abnormal">
-    <item>[&] ประตูเปิด</item>
-    <item>ฝากระโปรงเปิด</item>
-    <item>แรงดันลมยางผิดปกติ โปรดตรวจสอบ</item>
-    <item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item>
-    <item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item>
-    <item>เกิดความผิดปกติในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item>
-    <item>กรุณาเตรียมรถให้พร้อมเป็นอันดับแรก</item>
-    <item>ตรวจจับช่องจอดไม่ได้เนื่องจากความเร็วสูงขึ้น</item>
-    <item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item>
-    <item>กรุณารัดเข็มขัดนิรภัยเป็นอันดับแรก</item>
-    <item>ฝากระโปรงเปิด</item>
-    <item>เปิดใช้งานโหมดลากจูงแล้ว IPA ไม่พร้อมใช้งาน</item>
-    <item>โปรดปรับระบบกันสะเทือนให้อยู่ในตำแหน่งปกติ</item>
-    <item>กำลังใช้งานช่วงล่าง ไม่สามารถเข้าจอดได้</item>
-    <item>เกิดข้อผิดพลาดที่ช่วงล่าง โปรดติดต่อฝ่ายบริการลูกค้า</item>
-    <item>[&]</item>
-    <item>[&]</item>
-    <item>[&] หยุดการจอดรถชั่วคราว ยังไม่ปล่อยแป้นเบรก</item>
-    <item>หยุดการจอดรถชั่วคราว ประตูเปิดอยู่</item>
-    <item>หยุดการจอดรถชั่วคราว โปรดปล่อยแป้นคันเร่ง</item>
-    <item>หยุดการจอดรถชั่วคราว ฝาท้ายเปิด</item>
-    <item>หยุดการจอดรถชั่วคราว ฝากระโปรงเปิด</item>
-    <item>[&]</item>
-    <item>[&]</item>
-  </string-array>
-  <string-array name="array_pro_parking_tts">
-    <item>ปล่อยแป้นเบรกก็พร้อมไปแล้ว!</item>
-    <item>ระบบจดจำที่จอดรถกำลังทำงาน</item>
-    <item>เลี้ยวซ้ายข้างหน้า</item>
-    <item>เลี้ยวขวาข้างหน้า</item>
-    <item>เมื่อถึงทางแยกข้างหน้า โปรดระวังรถคันอื่น</item>
-    <item>กำลังจะเข้าสู่ทางลาด</item>
-    <item>กำลังจะเข้าสู่ทางลาด</item>
-    <item>กำลังจะหลบสิ่งกีดขวางข้างหน้า</item>
-    <item>กำลังหลบสิ่งกีดขวางใกล้เคียง</item>
-    <item>[&] กรุณาอย่าเร่งความเร็ว</item>
-    <item>ออกจากระบบจดจำที่จอดรถแล้ว</item>
-    <item>ออกจากระบบจดจำที่จอดรถแล้ว</item>
-    <item>กำลังจะจอดรถในช่องจอดของคุณ</item>
-    <item>ออกจากระบบจดจำที่จอดรถแล้ว</item>
-    <item>[&]</item>
-    <item>โปรดตรวจสอบสิ่งรอบตัว</item>
-    <item>โปรดใช้ความระมัดระวังในทางแคบ</item>
-    <item>กำลังจะถึงช่องจอดของคุณ</item>
-    <item>กำลังจะขับข้ามลูกระนาด จับให้แน่น</item>
-    <item>กำลังหลบคนเดินเท้าข้างหน้า</item>
-    <item>[&] กำลังหลีกเลี่ยงคนเดินเท้า</item>
-    <item>กำลังจะหลบรถคันหน้า</item>
-    <item>[&] กำลังรอรถคันหน้าเคลื่อนตัว</item>
-    <item>ออกจากระบบจดจำที่จอดรถแล้ว</item>
-    <item>กำลังจะถอยและปรับตำแหน่ง</item>
-    <item>ระวังยานพาหนะที่วิ่งสวนมา</item>
-    <item>เปิดใช้งานระบบจดจำที่จอดรถไม่ได้</item>
-    <item>กำลังหลีกเลี่ยงยานพาหนะด้านหลัง</item>
-    <item>ระวังคนเดินเท้า</item>
-    <item>ระวังคนเดินเท้า</item>
-    <item>การเบรกฉุกเฉิน</item>
-    <item>ระวังบริเวณโดยรอบ</item>
-    <item>[&] รถคันหลังขับตามมาเป็นเวลานาน โปรดหลีกเลี่ยง</item>
-    <item>การค้นหาช่องจอดระหว่างทาง</item>
-    <item>พบช่องจอดแล้ว กรุณาคลิกเริ่มต้น</item>
-    <item>ไม่พบช่องจอดระหว่างทาง</item>
-    <item>[&]</item>
-    <item>พบช่องจอดรถแล้ว กรุณาคลิกเริ่มต้น</item>
-    <item>พบช่องจอดแล้ว กรุณาคลิกเริ่มต้น</item>
-    <item>ระวังโปรดระวังด่านเก็บค่าผ่านทาง</item>
-    <item>[&] กำลังจะขับออกจากทางลาด โปรดตรวจสอบความปลอดภัย</item>
-    <item>กำลังจะถึงทางลาด โปรดแซงรถคันหน้าและช่วยขับผ่านไป</item>
-    <item>ออกจากระบบจดจำที่จอดรถแล้ว โปรดปฏิบัติตามคำแนะนำในระดับถัดไป</item>
-  </string-array>
-  <string-array name="array_setting_dialog_tab">
-    <item>เสียง</item>
-    <item>เอฟเฟ็กต์เสียง</item>
-  </string-array>
-</resources>
+<resources><array name="array_auto_parking"><item></item><item>请踩住刹车，点击开始</item><item>请松开刹车，开始泊车</item><item>请注意周围环境安全</item><item>泊车暂停，有障碍物阻挡</item><item>泊车已退出，请接管车辆</item><item>泊车已完成</item><item>泊车已退出</item><item>请注意周围环境安全</item><item>泊车暂停，有障碍物阻挡</item><item>泊出已退出</item><item>泊出已完成</item><item>请松开刹车，开始泊出</item><item>确认安全后，点击继续泊车</item><item>确认安全后，点击继续泊车</item><item>点击开始，帮你泊出</item><item></item><item>倒车中，请注意周围环境安全</item><item>车速过快，暂无法识别车位</item><item></item><item>找到车位，如需泊入请停车</item><item>泊车暂不可用</item><item>踩住刹车，点击开始</item><item>如需泊入，请踩刹车</item><item>请踩刹车，车辆溜车</item><item>坡度过大，暂无法识别车位</item><item>已暂停，如需恢复可松开刹车</item><item>倒车中，请注意周围环境安全</item><item></item><item></item><item></item><item></item><item></item><item>请注意后方剐蹭风险</item><item>正在探测车位内空间是否充足</item><item>车位有障碍物，请更换</item><item>请踩刹车，车辆溜车</item><item></item><item>泊车路径规划中</item><item>这个车位有点难，帮帮我吧</item></array><array name="array_toast_super_park"><item>泊车暂不可用</item><item>车门打开</item><item>车前盖打开</item><item>胎压异常，智能辅助泊车不可用</item><item>发生异常，请联系客服</item><item>发生异常，请联系客服</item><item>发生异常，请联系客服</item><item>请先使车辆Ready</item><item>当前车速高于24km/h，无法识别车位</item><item>发生异常，请联系客服处理</item><item>请先系好安全带</item><item>请先关闭尾门</item><item>拖车模式已开启，智能辅助泊车不可用</item><item>请调整悬架到正常挡位</item><item>悬架工作中，泊车无法进入</item><item>悬架异常，请联系客服</item><item></item><item></item><item></item><item></item><item></item><item>请松开刹车</item><item>请关闭车门</item><item>请松开加速踏板</item><item>请关闭尾门</item><item>请关闭前舱盖</item><item></item><item></item><item></item><item></item><item></item></array><array name="array_super_park_abnormal"><item></item><item>ประตูเปิด</item><item>ฝากระโปรงเปิด</item><item>แรงดันลมยางผิดปกติ โปรดตรวจสอบ</item><item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item><item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item><item>เกิดความผิดปกติในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item><item>กรุณาเตรียมรถให้พร้อมเป็นอันดับแรก</item><item>ตรวจจับช่องจอดไม่ได้เนื่องจากความเร็วสูงขึ้น</item><item>เกิดข้อผิดพลาดในการจอดรถ โปรดติดต่อฝ่ายบริการลูกค้า</item><item>กรุณารัดเข็มขัดนิรภัยเป็นอันดับแรก</item><item>ฝากระโปรงเปิด</item><item>เปิดใช้งานโหมดลากจูงแล้ว IPA ไม่พร้อมใช้งาน</item><item>โปรดปรับระบบกันสะเทือนให้อยู่ในตำแหน่งปกติ</item><item>กำลังใช้งานช่วงล่าง ไม่สามารถเข้าจอดได้</item><item>เกิดข้อผิดพลาดที่ช่วงล่าง โปรดติดต่อฝ่ายบริการลูกค้า</item><item></item><item></item><item></item><item></item><item></item><item>หยุดการจอดรถชั่วคราว ยังไม่ปล่อยแป้นเบรก</item><item>หยุดการจอดรถชั่วคราว ประตูเปิดอยู่</item><item>หยุดการจอดรถชั่วคราว โปรดปล่อยแป้นคันเร่ง</item><item>หยุดการจอดรถชั่วคราว ฝาท้ายเปิด</item><item>หยุดการจอดรถชั่วคราว ฝากระโปรงเปิด</item><item></item><item></item><item></item><item></item><item></item></array><array name="array_no_use_toast"><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>请保持手动驾驶，车速小于15km/h再试</item><item>请保持手动驾驶，系好安全带后再试</item><item>请先关闭HDC</item><item>请保持手动驾驶，松开加速踏板后再试</item><item>请松开刹车</item><item>请保持手动驾驶，关闭车门后再试</item><item>记忆泊车暂不可用，再往前开一会儿</item><item>为了您的安全，请重新学习泊车路线，当前路线有逆行路段</item><item>正在校验路线是否安全，请稍后再试</item><item>我好像迷路了，下次再试试吧</item><item>请保持手动驾驶，驶离坡道后再试</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>请保持手动驾驶，等待悬架调节完成后再试</item><item>请保持手动驾驶，调节悬架到正常高度后再试</item><item>请先手动驾驶通过坡道</item></array><array name="array_no_use"><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用，请保持手动驾驶，降低车速后再试</item><item>记忆泊车暂不可用，请保持手动驾驶，系好安全带后再试</item><item>请先关闭HDC</item><item>记忆泊车暂不可用，请保持手动驾驶，松开加速踏板后再试</item><item>请松开刹车</item><item>记忆泊车暂不可用，请保持手动驾驶，关闭车门后再试</item><item>记忆泊车暂不可用，再往前开一会儿</item><item>为了您的安全，请重新学习泊车路线，当前路线有逆行路段</item><item>正在校验路线是否安全，请稍后再试</item><item>我好像迷路了，下次再试试吧</item><item>记忆泊车暂不可用，请保持手动驾驶，驶离坡道后再试</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用</item><item>记忆泊车暂不可用，请保持手动驾驶，等待悬架调节完成后再试</item><item>记忆泊车暂不可用，请保持手动驾驶，调节悬架到正常高度后再试</item><item>请先手动驾驶通过坡道</item></array><array name="array_pro_parking"><item>请松开刹车</item><item></item><item>前方即将左转</item><item>前方即将右转</item><item>前方路口，请注意穿行车辆</item><item>即将驶入坡道</item><item>即将驶入坡道</item><item>即将绕行前方障碍物</item><item>正在避让附近障碍物</item><item></item><item>不要加速，我怕</item><item>记忆泊车已退出</item><item>记忆泊车已退出</item><item>即将泊入你的车位</item><item>记忆泊车已退出</item><item></item><item></item><item>请注意周围环境</item><item>通行空间狭窄，请注意</item><item>即将到达你的车位</item><item>即将通过减速带，你坐稳</item><item>正在绕行前方行人</item><item></item><item>正在避让行人</item><item>即将绕行前车</item><item></item><item>正在等待前车行驶</item><item>记忆泊车退出</item><item>即将倒车调整位置</item><item>前方有来车，请注意安全</item><item>记忆泊车激活失败</item><item>正在礼让后方车辆</item><item>注意行人</item><item>注意行人</item><item>紧急制动</item><item>注意周围环境</item><item></item><item>后方长时间跟车，请注意让行</item><item>正在寻找沿途车位</item><item>找到车位，请点击开始</item><item>寻找沿途车位失败</item><item></item><item></item><item>找到车位，请点击开始</item><item>找到车位，请点击开始</item><item>请注意收费杆</item><item></item><item>即将驶出坡道，请注意安全</item><item>临近坡道，请接管帮我开过去吧</item><item>记忆泊车已退出，请沿引导线开往下一层吧</item></array><array name="array_pro_parking_tts"><item>ปล่อยแป้นเบรกก็พร้อมไปแล้ว!</item><item>ระบบจดจำที่จอดรถกำลังทำงาน</item><item>เลี้ยวซ้ายข้างหน้า</item><item>เลี้ยวขวาข้างหน้า</item><item>เมื่อถึงทางแยกข้างหน้า โปรดระวังรถคันอื่น</item><item>กำลังจะเข้าสู่ทางลาด</item><item>กำลังจะเข้าสู่ทางลาด</item><item>กำลังจะหลบสิ่งกีดขวางข้างหน้า</item><item>กำลังหลบสิ่งกีดขวางใกล้เคียง</item><item></item><item>กรุณาอย่าเร่งความเร็ว</item><item>ออกจากระบบจดจำที่จอดรถแล้ว</item><item>ออกจากระบบจดจำที่จอดรถแล้ว</item><item>กำลังจะจอดรถในช่องจอดของคุณ</item><item>ออกจากระบบจดจำที่จอดรถแล้ว</item><item></item><item></item><item>โปรดตรวจสอบสิ่งรอบตัว</item><item>โปรดใช้ความระมัดระวังในทางแคบ</item><item>กำลังจะถึงช่องจอดของคุณ</item><item>กำลังจะขับข้ามลูกระนาด จับให้แน่น</item><item>กำลังหลบคนเดินเท้าข้างหน้า</item><item></item><item>กำลังหลีกเลี่ยงคนเดินเท้า</item><item>กำลังจะหลบรถคันหน้า</item><item></item><item>กำลังรอรถคันหน้าเคลื่อนตัว</item><item>ออกจากระบบจดจำที่จอดรถแล้ว</item><item>กำลังจะถอยและปรับตำแหน่ง</item><item>ระวังยานพาหนะที่วิ่งสวนมา</item><item>เปิดใช้งานระบบจดจำที่จอดรถไม่ได้</item><item>กำลังหลีกเลี่ยงยานพาหนะด้านหลัง</item><item>ระวังคนเดินเท้า</item><item>ระวังคนเดินเท้า</item><item>การเบรกฉุกเฉิน</item><item>ระวังบริเวณโดยรอบ</item><item></item><item>รถคันหลังขับตามมาเป็นเวลานาน โปรดหลีกเลี่ยง</item><item>การค้นหาช่องจอดระหว่างทาง</item><item>พบช่องจอดแล้ว กรุณาคลิกเริ่มต้น</item><item>ไม่พบช่องจอดระหว่างทาง</item><item></item><item></item><item>พบช่องจอดรถแล้ว กรุณาคลิกเริ่มต้น</item><item>พบช่องจอดแล้ว กรุณาคลิกเริ่มต้น</item><item>ระวังโปรดระวังด่านเก็บค่าผ่านทาง</item><item></item><item>กำลังจะขับออกจากทางลาด โปรดตรวจสอบความปลอดภัย</item><item>กำลังจะถึงทางลาด โปรดแซงรถคันหน้าและช่วยขับผ่านไป</item><item>ออกจากระบบจดจำที่จอดรถแล้ว โปรดปฏิบัติตามคำแนะนำในระดับถัดไป</item></array><array name="array_training_tips"><item>请先进入地下停车场再试</item><item>请驶离坡道再试</item><item>开始学习前，请勿在地库倒车</item><item>暂时无法开启</item><item></item><item>路线学习中，请开往你的车位</item><item>车速过高，请降低车速</item><item>刚经过坡道，已更新学习起点为当前位置</item><item>刚经过减速带</item><item>超过最大学习里程，路线学习已退出</item><item>本次学习结束</item><item>已驶离停车场，路线学习已退出</item><item>正在保存学习路线</item><item>学习成功</item><item>学习失败</item><item></item><item></item><item></item><item>检测到倒车行为，本次学习失败，请重新输入停车场再试</item><item>检测到上坡，本次学习失败</item><item>检测到下坡，本次学习失败</item><item>请先进入地下停车场再试</item><item>请先进入地下停车场再试</item><item>记忆泊车中，地图学习不可用</item><item>记忆泊车已使用过，地图学习不可用</item><item>遇到一点小麻烦，这次无法学习了</item><item>请先关闭车门</item><item>功能开关未打开</item><item>学习中，学习距离达到900米</item><item>学习出现闭环路线</item><item>满足学习条件但未识别到车位</item><item>遇到一点小麻烦，暂不可用</item></array><array name="array_training_fail_reason"><item>重跑一次或换条路试试</item><item>未泊入车位</item><item>路线信息不足</item><item>倒车行驶</item><item>路线保存失败</item></array><array name="array_notification_words"><item>好的</item><item>可以</item><item>没问题</item></array><array name="array_share_map_view_floors"><item>负一层</item><item>负二层</item><item>负三层</item><item>负四层</item><item>其他</item></array><array name="array_setting_dialog_tab"><item>เสียง</item><item>เอฟเฟ็กต์เสียง</item></array></resources>
